# gsmc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: iam-policy.json
src/gsm/: __init__.py  api.py  cli.py
src/gsm/aws/: ami.py  ebs.py  ec2.py  eip.py  security_groups.py
src/gsm/control/: docker.py  provisioner.py  ssh.py  state.py
src/gsm/games/: factorio.py  lgsm_catalog.json  lgsm_catalog.py  lgsm_data.json  lgsm_sync.py  registry.py
tests/: conftest.py  test_api.py
tests/aws/: test_ami.py  test_ebs.py  test_ec2.py  test_ec2_stop_start.py  test_eip.py  test_resources_queries.py  test_security_groups.py
tests/cli/: test_cli.py  test_cli_commands.py  test_cli_extra.py  test_cli_interrupt.py  test_cli_pause_resume.py  test_cli_resources.py  test_completion.py
tests/control/: test_docker.py  test_multi_machine.py  test_provisioner.py  test_provisioner_eip.py  test_provisioner_lgsm.py  test_provisioner_pause_resume.py  test_provisioner_resources.py  test_provisioner_snapshot.py  test_reconcile.py  test_ssh.py  test_state.py
tests/games/: test_game_definitions.py  test_games.py  test_lgsm_catalog.py  test_lgsm_config.py  test_lgsm_sync.py
