[project]
name = "gsmc"
version = "0.1.0"
description = "Game Server Maker - Launch game servers on AWS EC2 with Docker"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Samy Abidib"}]
license = {text = "MIT"}
keywords = ["aws", "ec2", "docker", "game-server", "factorio", "linuxgsm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "boto3>=1.35",
    "paramiko>=3.4",
    "rich>=13.7",
    "rcon>=2.4",
    "halo>=0.0.31",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "moto[ec2]>=5.0",
    "httpx>=0.27",
]

[project.scripts]
gsmc = "gsm.cli:cli"

[project.urls]
Homepage = "https://github.com/sabidib/gsmc"
Repository = "https://github.com/sabidib/gsmc"
Issues = "https://github.com/sabidib/gsmc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["demo.gif", "demo.cast", "demo_cast.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/gsm"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
gsmc = { workspace = true }

[dependency-groups]
dev = [
    "gsmc",
]
